// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown to html ast parser full examples should parse markdown simple example 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Hello world!",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "h1",
      "type": "element",
    },
    Object {
      "type": "text",
      "value": "
",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 31,
              "line": 3,
              "offset": 46,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 16,
            },
          },
          "type": "text",
          "value": "This is just a simple example.",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 31,
          "line": 3,
          "offset": 46,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 16,
        },
      },
      "properties": Object {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 4,
      "offset": 47,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`markdown to html ast parser full examples should parse markdown simple-nested example 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Hello ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "world",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "properties": Object {},
          "tagName": "code",
          "type": "element",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "type": "text",
          "value": "!",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "h1",
      "type": "element",
    },
    Object {
      "type": "text",
      "value": "
",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 16,
              "line": 3,
              "offset": 33,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 18,
            },
          },
          "type": "text",
          "value": "This is just a ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "simple",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 24,
              "line": 3,
              "offset": 41,
            },
            "start": Object {
              "column": 16,
              "line": 3,
              "offset": 33,
            },
          },
          "properties": Object {},
          "tagName": "code",
          "type": "element",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 33,
              "line": 3,
              "offset": 50,
            },
            "start": Object {
              "column": 24,
              "line": 3,
              "offset": 41,
            },
          },
          "type": "text",
          "value": " example.",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 33,
          "line": 3,
          "offset": 50,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "properties": Object {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 4,
      "offset": 51,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`markdown to html ast parser should parse headings + text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Some heading",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "h1",
      "type": "element",
    },
    Object {
      "type": "text",
      "value": "
",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 2,
              "offset": 25,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 15,
            },
          },
          "type": "text",
          "value": "Some text.",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 11,
          "line": 2,
          "offset": 25,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 15,
        },
      },
      "properties": Object {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 11,
      "line": 2,
      "offset": 25,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`markdown to html ast parser should parse headings 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Some heading",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Object {},
      "tagName": "h1",
      "type": "element",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
